--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,20 @@
 html {
+  position: relative;
   font-size: 10px;
   font-family: sans-serif;
+  border: 1px solid black;
+  margin-top: 50px;
+  padding-bottom: 200px;
+  height: 720px;
+}
+
+html::before {
+  content: ""; 
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%; 
+  border-left: 1px solid black; 
 }
 
 * {
