--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -165,3 +165,10 @@ hr {
   display: inline-block;
   margin: 2rem 1rem 0 0;
 }
+
+.page-name-container{
+  display: flex;
+  justify-content: center;
+  margin-top: -150px !important;
+  color: #1266cc;
+}
